--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,51 @@
 # Sets default memory used for Gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx8G
+org.gradle.jvmargs=-Xmx1G
 org.gradle.daemon=false
-jei_version=1.16.5:7.7.1.126
-project.name=The Mato
+
+## External Dependency Properties
+
+# The Just Enough Items version this mod uses.
+jei_version=7.7.1.126
+
+
+## Environment Properties
+
+# The Minecraft version must agree with the Forge version to get a valid artifact
+minecraft_version=1.16.5
+# The Minecraft version range can use any release version of Minecraft as bounds.
+# Snapshots, pre-releases, and release candidates are not guaranteed to sort properly as they do not follow standard versioning conventions.
+minecraft_version_range=[1.16.4,1.16.5)
+# The Forge version must agree with the Minecraft version to get a valid artifact
+forge_version=36.2.39
+# The Forge version range can use any version of Forge as bounds or match the loader version range
+forge_version_range=[35,36,)
+# The loader version range can only use the major version of Forge/FML as bounds
+loader_version_range=[35,36,)
+# The channel to use for the mappings. Can be 'official', 'parchment', 'snapshot' or 'stable'.
+mappings_channel=official
+# The version of the Mixin library
+mixin_version=0.8
+
+
+## Mod Properties
+
+# The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
+# Must match the String constant located in the main mod class annotated with @Mod.
+mod_id=themato
+# The human-readable display name for the mod.
+mod_name=The Mato
+# A no spaces version of the mod's display name.
+mod_name_no_spaces=TheMato
+# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
+mod_license=MIT License
+# The mod version. See https://semver.org/
+mod_version=0.3.5
+# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
+# This should match the base package used for the mod sources.
+# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
+mod_group_id=melonystudios.themato
+# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
+mod_authors=isabellawoods
+# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
+mod_description=The Mato is a mod that adds various new biomes and blocks based either on features from Brazil or old Minecraft features. Credits to Gabriel for ideas on items for each region.
