--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ minecraft {
             workingDirectory project.file('run')
 
             // Recommended logging data for a user development environment.
-            // The markers can be added/remove as needed separated by commas.
+            // The markers can be added/removed as needed, and are separated by commas.
             // "SCAN": For mods scan.
             // "REGISTRIES": For firing of registry events.
             // "REGISTRYDUMP": For getting the contents of all registries.
